enhancement: 'phpui.timetable_hide_deleted_users' with default value of 'false' allow to hide deleted users in user selection list element of event list boxes improvement: lms-ui-multiselect: 'data-blend' attribute of option element causes presentation of corresponding multi select option with blend color

--- a/templates/default/event/eventschedulefilter.html
+++ b/templates/default/event/eventschedulefilter.html
@@ -36,12 +36,18 @@
 							<OPTION value="-1" {if is_array($filter.userid) && in_array('-1', $filter.userid)} selected{/if}
 									data-exclusive>- {trans("unassigned")} -</OPTION>
 							{foreach $userlist as $user}
-								{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') || (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') && $user.access) || is_array($filter.owner) && in_array($user.id, $filter.owner)}
-									<OPTION value="{$user.id}"
+								{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')
+									&& !ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users')
+									|| (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') && $user.access)
+									|| (ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users') && !$user.deleted)
+									|| is_array($filter.owner) && in_array($user.id, $filter.owner)}
+									<option value="{$user.id}"
 										{if is_array($filter.userid) && in_array($user.id, $filter.userid)}} selected{/if}
-										{if !$user.access} data-crossed{/if}>
-											{$user.rname|trunescape:40} ({$user.login})
-									</OPTION>
+										{if !$user.access} data-blend{/if}
+										{if $user.deleted} data-crossed{/if}
+									>{strip}
+										{$user.rname|trunescape:40} ({$user.login})
+									{/strip}</option>
 								{/if}
 							{/foreach}
 						</SELECT>
