bugfix: fixed typo in <strong> element name

--- a/templates/default/taxrate/taxrateadd.html
+++ b/templates/default/taxrate/taxrateadd.html
@@ -72,7 +72,7 @@
 				{icon name="calendar"}
 			</td>
 			<td class="nobr">
-				<stromg>{trans("Binds from date:")}</stromg>
+				<strong>{trans("Binds from date:")}</strong>
 			</td>
 			<td>
 				<input type="text" name="taxrateadd[validfrom]" value="{$taxrateadd.validfrom}" size="10"
