--- a/templates/default/event/eventmodify.html
+++ b/templates/default/event/eventmodify.html
@@ -115,27 +115,38 @@
 					{/box_row}
 
 					{box_row icon="user" label="Users:" field_class="multiselect" icon_class="fa-fw"}
-						<SELECT name="event[userlist][]" class="lms-ui-advanced-select" id="userlist" multiple data-default-value="{trans("- select user -")}"
-								data-shorten-to-default-value="false" {if !empty(ConfigHelper::checkConfig('phpui.event_user_required'))}required{/if}>
+						<select name="event[userlist][]" class="lms-ui-advanced-select" id="userlist" multiple
+								{if !empty(ConfigHelper::checkConfig('phpui.event_user_required'))}required{/if}>
 							{foreach $userlist as $user}
 								{if $layout.module == 'eventadd'}
-									{if $user.access}
-										<OPTION value="{$user.id}"
+									{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')
+										&& !ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users')
+										|| (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') && $user.access)
+										|| (ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users') && !$user.deleted)
+										|| is_array($event.userlist) && in_array($user.id, $event.userlist)}
+										<option value="{$user.id}"
+											{if !$user.access} data-blend{/if}
+											{if $user.deleted} data-crossed{/if}
 											{if is_array($event.userlist) && in_array($user.id, $event.userlist)}selected{/if}>
 												{$user.rname|trunescape:40} ({$user.login})
-										</OPTION>
+										</option>
 									{/if}
 								{else}
-									{if $user.access || (is_array($event.userlist) && in_array($user.id, $event.userlist))}
-										<OPTION value="{$user.id}"
-											{if !$user.access} data-crossed{/if}
+									{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')
+										&& !ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users')
+										|| (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') && $user.access)
+										|| (ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users') && !$user.deleted)
+										|| is_array($event.userlist) && in_array($user.id, $event.userlist)}
+										<option value="{$user.id}"
+											{if !$user.access} data-blend{/if}
+											{if $user.deleted} data-crossed{/if}
 											{if is_array($event.userlist) && in_array($user.id, $event.userlist)}selected{/if}>
 												{$user.rname|trunescape:40} ({$user.login})
-										</OPTION>
+										</option>
 									{/if}
 								{/if}
 							{/foreach}
-						</SELECT>
+						</select>
 						<br>
 						<label>
 							<input type="radio" name="event[usergroup]" id="usergroup_me" value="-1" onChange="xajax_getUsersForGroup(-1)"{if $event.usergroup == -1} checked{/if}>
