--- a/templates/default/rt/rtfilter.html
+++ b/templates/default/rt/rtfilter.html
@@ -76,7 +76,7 @@
             <label class="nobr">
             {trans("Owner")}
                 <input type="hidden" name="owner" value="all">
-                <SELECT size="1" name="owner[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect"
+                <select size="1" name="owner[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect"
                         data-default-value="{trans("No filter")}" data-popup-title="{trans("Select owners")}">
                     <option value="all" data-exclusive{if empty($filter.owner)} selected{/if}>{trans("No filter")}</option>
                     <option value="-1" {if !empty($filter.owner) && is_array($filter.owner) && in_array('-1', $filter.owner)} selected{/if}>{trans("no owner")}</option>
@@ -84,28 +84,46 @@
                     <option value="-3" data-exclusive{if !empty($filter.owner) && is_array($filter.owner) && in_array('-3', $filter.owner)} selected{/if}>{trans("no owner or logged user")}</option>
                     {foreach $users as $user}
                         {if !ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')
+                            && !ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users')
                             || (ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access)
-                            || (is_array($filter.owner) && in_array($user.id, $filter.owner))}
-                            <OPTION{if !$user.access} disabled{/if} value="{$user.id}"{if is_array($filter.owner) && in_array($user.id, $filter.owner)} selected{/if}>{$user.rname|trunescape:40} ({$user.login})</OPTION>
+                            || (ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users') && !$user.deleted)
+                            || is_array($filter.owner) && in_array($user.id, $filter.owner)}
+                            <option
+                                {if !$user.access} data-blend{/if}
+                                {if $user.deleted} data-crossed{/if}
+                                value="{$user.id}"
+                                {if is_array($filter.owner) && in_array($user.id, $filter.owner)} selected{/if}
+                            >{strip}
+                                {$user.rname|trunescape:40} ({$user.login})
+                            {/strip}</option>
                         {/if}
                     {/foreach}
-                </SELECT>
+                </select>
             </label>
             <label class="nobr">
                 {trans("Verifier")}
                 <input type="hidden" name="vids" value="all">
-                <SELECT size="1" name="vids[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect" data-default-value="{trans("No filter")}" >
+                <select size="1" name="vids[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect" data-default-value="{trans("No filter")}" >
                     <option value="all" data-exclusive{if !is_array($filter.verifierids) && $filter.verifierids == "all"} selected{/if}>{trans("No filter")}</option>
                     <option value="-1" data-exclusive{if !is_array($filter.verifierids) && $filter.verifierids == -1} selected{/if}>{trans("Unassigned")}</option>
                     <option value="-2" data-exclusive{if !is_array($filter.verifierids) && $filter.verifierids == -2} selected{/if}>{trans("Assigned")}</option>
                     {foreach $users as $user}
                         {if !ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')
+                            && !ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users')
                             || (ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access)
-                            || (is_array($filter.verifierids) && in_array($user.id, $filter.verifierids))}
-                            <OPTION{if !$user.access} disabled{/if} value="{$user.id}"{if is_array($filter.verifierids) && in_array($user.id, $filter.verifierids)} SELECTED{/if}>{$user.rname|trunescape:40} ({$user.login})</OPTION>
+                            || (ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users') && !$user.deleted)
+                            || is_array($filter.verifierids) && in_array($user.id, $filter.verifierids)}
+                            <option
+                                {if !$user.access} data-blend{/if}
+                                {if $user.deleted} data-crossed{/if}
+                                value="{$user.id}"
+                                {if is_array($filter.verifierids) && in_array($user.id, $filter.verifierids)} selected{/if}
+                            >{strip}
+                                {$user.rname|trunescape:40} ({$user.login})
+                            {/strip}</option>
                         {/if}
                     {/foreach}
-                </SELECT>
+                </select>
             </label>
             {if ConfigHelper::checkPrivilege('helpdesk_advanced_operations')}
             <label class="nobr">
