--- a/templates/default/event/eventschedulefilter.html
+++ b/templates/default/event/eventschedulefilter.html
@@ -1,4 +1,6 @@
 {block name=eventschedulefilter}
+{$hide_disabled_users = ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')}
+{$hide_deleted_users = ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users')}
 	<TR>
 		<TD class="text-center nobr no-print">
 			<A href="?m=eventschedule&day=1&month={if $filter.month == 1}12{else}{math equation="x-1" x=$filter.month}{/if}&amp;year={if $filter.month == 1}{math equation="x-1" x=$filter.year}{else}{$filter.year}{/if}">&laquo;&laquo;&laquo;&nbsp;</A>
@@ -36,19 +38,18 @@
 							<OPTION value="-1" {if is_array($filter.userid) && in_array('-1', $filter.userid)} selected{/if}
 									data-exclusive>- {trans("unassigned")} -</OPTION>
 							{foreach $userlist as $user}
-								{if !ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users')
-									&& !ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users')
-									|| (ConfigHelper::checkConfig('phpui.timetable_hide_disabled_users') && $user.access)
-									|| (ConfigHelper::checkConfig('phpui.timetable_hide_deleted_users') && !$user.deleted)
-									|| is_array($filter.owner) && in_array($user.id, $filter.owner)}
-									<option value="{$user.id}"
-										{if is_array($filter.userid) && in_array($user.id, $filter.userid)}} selected{/if}
-										{if !$user.access} data-blend{/if}
-										{if $user.deleted} data-crossed{/if}
-									>{strip}
-										{$user.rname|trunescape:40} ({$user.login})
-									{/strip}</option>
+								{if (!is_array($filter.owner) || !in_array($user.id, $filter.owner))
+									&& ($hide_disabled_users && !$user.access
+										|| $hide_deleted_users && $user.deleted)}
+									{continue}
 								{/if}
+								<option value="{$user.id}"
+									{if is_array($filter.userid) && in_array($user.id, $filter.userid)}} selected{/if}
+									{if !$user.access} data-blend{/if}
+									{if $user.deleted} data-crossed{/if}
+								>{strip}
+									{$user.rname|trunescape:40} ({$user.login})
+								{/strip}</option>
 							{/foreach}
 						</SELECT>
 						{trans("Privacy:")}
