--- a/templates/default/rt/rtfilter.html
+++ b/templates/default/rt/rtfilter.html
@@ -1,5 +1,8 @@
 {block name="rtfilter"}
 
+{$hide_disabled_users = ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')}
+{$hide_deleted_users = ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users')}
+
 <TR>
     <TD colspan="10" class="ticket-list-filter">
         <div class="lms-ui-filter-container">
@@ -83,20 +86,19 @@
                     <option value="-2" data-exclusive{if !empty($filter.owner) && is_array($filter.owner) && in_array('-2', $filter.owner)} selected{/if}>{trans("with owner")}</option>
                     <option value="-3" data-exclusive{if !empty($filter.owner) && is_array($filter.owner) && in_array('-3', $filter.owner)} selected{/if}>{trans("no owner or logged user")}</option>
                     {foreach $users as $user}
-                        {if !ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')
-                            && !ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users')
-                            || (ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access)
-                            || (ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users') && !$user.deleted)
-                            || is_array($filter.owner) && in_array($user.id, $filter.owner)}
-                            <option
-                                {if !$user.access} data-blend{/if}
-                                {if $user.deleted} data-crossed{/if}
-                                value="{$user.id}"
-                                {if is_array($filter.owner) && in_array($user.id, $filter.owner)} selected{/if}
-                            >{strip}
-                                {$user.rname|trunescape:40} ({$user.login})
-                            {/strip}</option>
+                        {if (!is_array($filter.owner) || !in_array($user.id, $filter.owner))
+                            && ($hide_disabled_users && !$user.access
+                                || $hide_deleted_users && $user.deleted)}
+                            {continue}
                         {/if}
+                        <option
+                            {if !$user.access} data-blend{/if}
+                            {if $user.deleted} data-crossed{/if}
+                            value="{$user.id}"
+                            {if is_array($filter.owner) && in_array($user.id, $filter.owner)} selected{/if}
+                        >{strip}
+                            {$user.rname|trunescape:40} ({$user.login})
+                        {/strip}</option>
                     {/foreach}
                 </select>
             </label>
@@ -108,20 +110,19 @@
                     <option value="-1" data-exclusive{if !is_array($filter.verifierids) && $filter.verifierids == -1} selected{/if}>{trans("Unassigned")}</option>
                     <option value="-2" data-exclusive{if !is_array($filter.verifierids) && $filter.verifierids == -2} selected{/if}>{trans("Assigned")}</option>
                     {foreach $users as $user}
-                        {if !ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')
-                            && !ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users')
-                            || (ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access)
-                            || (ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users') && !$user.deleted)
-                            || is_array($filter.verifierids) && in_array($user.id, $filter.verifierids)}
-                            <option
-                                {if !$user.access} data-blend{/if}
-                                {if $user.deleted} data-crossed{/if}
-                                value="{$user.id}"
-                                {if is_array($filter.verifierids) && in_array($user.id, $filter.verifierids)} selected{/if}
-                            >{strip}
-                                {$user.rname|trunescape:40} ({$user.login})
-                            {/strip}</option>
+                        {if (!is_array($filter.verifierids) || !in_array($user.id, $filter.verifierids))
+                            && ($hide_disabled_users && !$user.access
+                                || $hide_deleted_users && $user.deleted)}
+                            {continue}
                         {/if}
+                        <option
+                            {if !$user.access} data-blend{/if}
+                            {if $user.deleted} data-crossed{/if}
+                            value="{$user.id}"
+                            {if is_array($filter.verifierids) && in_array($user.id, $filter.verifierids)} selected{/if}
+                        >{strip}
+                            {$user.rname|trunescape:40} ({$user.login})
+                        {/strip}</option>
                     {/foreach}
                 </select>
             </label>
