--- a/templates/default/rt/rtmessageadd.html
+++ b/templates/default/rt/rtmessageadd.html
@@ -5,6 +5,8 @@
 {$xajax}
 
 {$group_action=is_array($message.ticketid)}
+{$hide_disabled_users = ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')}
+{$hide_deleted_users = ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users')}
 
 <style>
 
@@ -238,18 +240,17 @@
 						<option value="-100"{if $message.owner == -100} selected{/if}>{trans("- no changes -")}</option>
 					{/if}
 					{foreach $userlist as $user}
-						{if !ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')
-							&& !ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users')
-							|| (ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access)
-							|| (ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users') && !$user.deleted)
-							|| $user.id == $message.owner}
-							<option value="{$user.id}"
-								class="{if !$user.access} lms-ui-disabled{/if}{if $user.deleted} lms-ui-crossed{/if}"
-								{if $user.id == $message.owner} selected{/if}
-							>{strip}
-								{$user.rname|trunescape:40} ({$user.login})
-							{/strip}</option>
+						{if $user.id != $message.owner
+							&& ($hide_disabled_users && !$user.access
+								|| $hide_deleted_users && $user.deleted)}
+							{continue}
 						{/if}
+						<option value="{$user.id}"
+							class="{if !$user.access} lms-ui-disabled{/if}{if $user.deleted} lms-ui-crossed{/if}"
+							{if $user.id == $message.owner} selected{/if}
+						>{strip}
+							{$user.rname|trunescape:40} ({$user.login})
+						{/strip}</option>
 					{/foreach}
 				</select>
 				&nbsp;
@@ -268,18 +269,17 @@
 							<option value="-1"{if $message.verifierid == -1} selected{/if}>{trans("- no changes -")}</option>
 						{/if}
 						{foreach $userlist as $user}
-							{if !ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')
-								&& !ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users')
-								|| (ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access)
-								|| (ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users') && !$user.deleted)
-								|| $user.id == $message.verifierid}
-								<option value="{$user.id}"
-									class="{if !$user.access} lms-ui-disabled{/if}{if $user.deleted} lms-ui-crossed{/if}"
-									{if $user.id == $message.verifierid} selected{/if}
-								>{strip}
-									{$user.rname|trunescape:40} ({$user.login})
-								{/strip}</option>
+							{if $user.id != $message.verifierid
+								&& ($hide_disabled_users && !$user.access
+									|| $hide_deleted_users && $user.deleted)}
+								{continue}
 							{/if}
+							<option value="{$user.id}"
+								class="{if !$user.access} lms-ui-disabled{/if}{if $user.deleted} lms-ui-crossed{/if}"
+								{if $user.id == $message.verifierid} selected{/if}
+							>{strip}
+								{$user.rname|trunescape:40} ({$user.login})
+							{/strip}</option>
 						{/foreach}
 					</select>
 				{else}
