bugfix: small visual fix

--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -14,6 +14,7 @@
 <h1>{$layout.pagetitle}</h1>
 
 <style>
+
 	.billing-table tr td,th {
 		padding-right: 15px;
 	}
@@ -21,6 +22,11 @@
 	.billing-table tr td:last-child, th:last-child {
 		padding-right: 0px;
 	}
+
+	#choosefilter .lms-ui-customer-select-container {
+		display: inline-flex;
+	}
+
 </style>
 
 <table class="lmsbox billing-table lms-ui-background-cycle">
