--- a/templates/default/customer/customergroups.html
+++ b/templates/default/customer/customergroups.html
@@ -35,7 +35,7 @@
 							{trans("ID:")}
 						</div>
 						<div class="lms-ui-tab-table-column datefrom">
-							{trans("Od")}
+							{trans("From")}
 						</div>
 					</div>
 				</div>
