--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -38,6 +38,70 @@
         {assign var="number_of_table_columns" value="11"}
     </colgroup>
     <thead>
+        <tr VALIGN="MIDDLE">
+            <td colspan="{$number_of_table_columns}">
+                <FORM method="post" action="?m={$layout.module}" name="choosefilter" id="choosefilter">
+                    <INPUT type="hidden" NAME="m" VALUE="voipaccountbillinglist">
+                    {customerlist
+                        form="choosefilter"
+                        customers=$voipownerlist.name
+                        selected=$listdata.fvownerid
+                        version=2
+                        selectname="fvownerid"
+                        customOnChange="CustomerChanged($(this).val());"
+                    }
+
+                    {trans("Voip account")}
+                    {include file="voipaccount/voipaccounts.html"}
+
+                    <span class="lms-ui-date-period-container">
+                        <span>{trans("Period")}</span>
+                        <span>{trans("from")}</span>
+                        {date_period_preset from="#frangefrom" to="#frangeto"}
+                        <input
+                            type="text"
+                            name="frangefrom"
+                            id="frangefrom"
+                            size="10"
+                            maxlength="20"
+                            value="{if $listdata.frangefrom > 0}{$listdata.frangefrom|date_format:"%Y/%m/%d"}{/if}"
+                            {tip class="lms-ui-date" text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>
+                        <span>{trans("to")}</span>
+                        <input
+                            type="text"
+                            name="frangeto"
+                            id="frangeto"
+                            size="10"
+                            maxlength="20"
+                            value="{if $listdata.frangeto > 0}{$listdata.frangeto|date_format:"%Y/%m/%d"}{/if}"
+                            {tip class="lms-ui-date" text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>&nbsp;
+                    </span>
+
+                    {trans("Connection type:")}
+                    <SELECT SIZE="1" NAME="ftype">
+                        <OPTION VALUE="">{trans("- all -")}</OPTION>
+                        <OPTION VALUE="{CALL_INCOMING}" {if $listdata.ftype == $smarty.const.CALL_INCOMING} SELECTED{/if}>{trans("incoming")}</OPTION>
+                        <OPTION VALUE="{CALL_OUTGOING}" {if $listdata.ftype == $smarty.const.CALL_OUTGOING} SELECTED{/if}>{trans("outgoing")}</OPTION>
+                    </SELECT>
+
+                    {trans("Status:")}
+                    <SELECT SIZE="1" NAME="fstatus">
+                        <OPTION VALUE="">{trans("- all -")}</OPTION>
+                        <OPTION VALUE="{CALL_ANSWERED}" {if $listdata.fstatus == $smarty.const.CALL_ANSWERED} SELECTED{/if}>{trans("answered")}</OPTION>
+                        <OPTION VALUE="{CALL_NO_ANSWER}" {if $listdata.fstatus == $smarty.const.CALL_NO_ANSWER} SELECTED{/if}>{trans("no answer")}</OPTION>
+                        <OPTION VALUE="{CALL_BUSY}" {if $listdata.fstatus == $smarty.const.CALL_BUSY} SELECTED{/if}>{trans("busy<!voip>")}</OPTION>
+                        <OPTION VALUE="{CALL_SERVER_FAILED}" {if $listdata.fstatus == $smarty.const.CALL_SERVER_FAILED} SELECTED{/if}>{trans("server error")}</OPTION>
+                    </SELECT>
+                    {button type="submit" icon="submit"}
+                </FORM>
+            </td>
+        </tr>
+        {if $pagination->getTotal() != 0}
+        <TR>
+            <TD class="lms-ui-pagination" colspan="{$number_of_table_columns}">
+                {include file="pagination.html"}
+            </TD>
+        </TR>
         <tr {tip text="Click on column name to change sorting order"}>
             <th nowrap>
                 <a href="?m=voipaccountbillinglist&amp;o=begintime{order_check category="begintime"}">{trans("Begin time:<!voip>")}</a>
