--- a/templates/default/customer/customerbalancebox.html
+++ b/templates/default/customer/customerbalancebox.html
@@ -63,8 +63,7 @@
 			{/if}
 			{if  ConfigHelper::checkPrivilege('finances_management')}
 				<A href="javascript:show_list()">{trans("Show All:")}</A>
-				<INPUT type="hidden" name="cat" value="customerid" form="addbalance-form">
-				<INPUT type="hidden" name="search" value="{$balancelist.customerid}" form="addbalance-form">
+				<input type="hidden" value="{$balancelist.customerid}" name="customer">
 				<SELECT name="showlist" id="showlistselect" form="addbalance-form">
 					{if $limit}<OPTION value="list">{trans("transactions")}</OPTION>{/if}
 					<OPTION value="invoice">{trans("invoices")}</OPTION>
@@ -580,9 +579,9 @@
 		var type = document.getElementById('showlistselect').value;
 
 		if (type == 'invoice')
-			document.addbalance.action = '?m=invoicelist';
+			document.addbalance.action = '?m=invoicelist&customer={$balancelist.customerid}';
 		else if (type == 'invoicepro')
-			document.addbalance.action = '?m=invoicelist&proforma=1';
+			document.addbalance.action = '?m=invoicelist&proforma=1&customer={$balancelist.customerid}';
 		else if (type == 'note')
 			document.addbalance.action = '?m=notelist';
 		else
