--- a/templates/default/invoice/invoicelist.html
+++ b/templates/default/invoice/invoicelist.html
@@ -86,6 +86,12 @@
 			<div class="lms-ui-filter-container">
 				<div class="lms-ui-filter-definition">
 					{icon name="filter"}
+					{customerlist
+						selectname="cid"
+						version="2"
+						inputname="customer"
+						selected=$listdata.customer
+					}
 					<input type="text" name="search" value="{$listdata.search}" size="15"
 						{tip text="Enter value of searching data and select category"}>
 					<select size="1" name="cat">
@@ -95,7 +101,6 @@
 						<option value="number"{if $listdata.cat == "number"} selected{/if}>{trans("number")}</option>
 						<option value="value"{if $listdata.cat == "value"} selected{/if}>{trans("value")}</option>
 						<option value="name"{if $listdata.cat == "name"} selected{/if}>{trans("customer name")}</option>
-						<option value="customerid"{if $listdata.cat == "customerid"} selected{/if}>{trans("customer ID")}</option>
 						<option value="ten"{if $listdata.cat == "ten"} selected{/if}>{trans("TEN")}</option>
 						<option value="address"{if $listdata.cat == "address"} selected{/if}>{trans("address")}</option>
 						<option value="cnotes"{if $listdata.cat == "cnotes"} selected{/if}>{trans("show only credit notes")}</option>
