improvement: small visual tweak in filter panels

--- a/css/style.less
+++ b/css/style.less
@@ -2065,6 +2065,7 @@ div.lms-ui-filter-container {
 	div.lms-ui-filter-definition {
 		display: flex;
 		flex-wrap: wrap;
+		align-items: center;
 		white-space: normal;
 		max-width: 80%;
 		& > *,
