--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -707,7 +707,7 @@
 						    <TR>
 						        <TD colspan="2"></TD>
 					            <TD colspan="2" class="nobr">
-					                {trans("sort by")}:
+					                {trans("Sorting:")}
 					                <SELECT name="sorttype" {tip text="Select sort cryterion"}>
 					                    <OPTION value="cdate">{trans("Draw-up date")}</OPTION>
 					                    <OPTION value="sdate">{trans("Sale date")}</OPTION>
