enhancement: optional possibility of sending documents to customers after he confirmed document in userpanel (small improvements)

--- a/userpanel/modules/documents/templates/setup.html
+++ b/userpanel/modules/documents/templates/setup.html
@@ -447,7 +447,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="document_approval_customer_notification_attachments">
-													{trans("Attachments")}
+													{trans("Send document to customer")}
 												</label>
 											</td>
 											<td>
